<resources>

    <string-array name="sections">
        <item>@string/section_movie</item>
        <item>@string/section_tv</item>
        <item>@string/section_comic</item>
        <item>@string/section_variety</item>
        <!--        <item>@string/section_private</item>-->
    </string-array>

    <!--    fragment tabLayout title-->
    <string name="section_recommend">推荐</string>
    <string name="section_movie">电影</string>
    <string name="section_tv">电视剧</string>
    <string name="section_comic">动漫</string>
    <string name="section_variety">综艺</string>
    <string name="section_private">私人</string>

    <string name="section_cn">中文</string>

    <!--    mine page-->
    <string name="mine_nav_history">观看历史</string>
    <string name="mine_nav_download">离线缓存</string>
    <string name="main_nav_download">下载管理</string>
    <string name="main_nav_favorite">我的收藏</string>
    <string name="main_nav_replay">稍后再看</string>


    <!--    drawer navigation title-->
    <string name="main_nav_home">首页</string>

    <string name="main_nav_theme">主题</string>
    <string name="main_nav_upload">上传</string>
    <string name="main_nav_config">设置</string>

    <!--    download-->
    <string name="main_menu_offline_download">离线缓存</string>
    <string name="main_menu_offline_downloading">正在缓存</string>
    <string name="title_downloaded">已缓存视频</string>

    <!--    history-->
    <string name="main_menu_history">缓存视频信息</string>

    <!--    search-->
    <string name="main_search_text">搜索 影片、动漫</string>

    <string name="icon_text_like">点赞</string>
    <string name="icon_text_favorite">收藏</string>
    <string name="icon_text_download">缓存</string>
    <string name="icon_text_share">分享</string>
    <string name="icon_text_report_error">报错</string>

    <string name="text_search">搜索</string>
    <string name="text_cancel">取消</string>
    <string name="text_search_hint">搜索关键词</string>


    <string name="sample_long_text">在实际开发中，可能会存在需要先请求A接口，再去请求B接口的情况</string>
    <string name="sample_video_title">东方不败之风云再起</string>


    <string name="app_name">长沙影视</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_simple_player">SimplePlayerActivity</string>
    <string name="image">video</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="desc">简介</string>

    <string name="video_all">查看全部</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

</resources>