<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_grower_margin"
            android:layout_marginBottom="@dimen/default_normal_margin"
            android:paddingStart="@dimen/default_grower_margin"
            android:paddingEnd="@dimen/default_general_margin">

            <TextView
                android:id="@+id/tv_vod_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxEms="10"
                android:maxLines="1"
                android:text="比特币资本战十年翻10000倍20万人一夜血亏400亿背后究是谁在获益"
                android:textColor="@color/text_black_alpha"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_vod_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_general_margin"
                android:text="8.2分"
                android:textColor="@color/text_gold"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_vod_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_vod_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:text="@string/desc"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_normal"
                app:drawableRightCompat="@drawable/ic_more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_remarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_grower_margin"
            android:textColor="@color/text_gray"
            android:textSize="12sp"
            tools:text="更新至09集" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_general_margin"
            android:layout_marginBottom="@dimen/default_general_margin"
            android:orientation="horizontal"
            android:padding="@dimen/default_general_margin">

            <TextView
                android:id="@+id/btn_like"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/default_normal_margin"
                android:padding="@dimen/default_tiny_margin"
                android:text="@string/icon_text_like"
                android:textAlignment="center"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_smaller"
                app:drawableTopCompat="@drawable/selector_like" />

            <TextView
                android:id="@+id/btn_favor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/default_normal_margin"
                android:padding="@dimen/default_tiny_margin"
                android:text="@string/icon_text_favorite"
                android:textAlignment="center"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_smaller"
                app:drawableTopCompat="@drawable/selector_favor" />

            <TextView
                android:id="@+id/btn_download"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/default_normal_margin"
                android:padding="@dimen/default_tiny_margin"
                android:text="@string/icon_text_download"
                android:textAlignment="center"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_smaller"
                app:drawableTopCompat="@drawable/ic_download" />

            <TextView
                android:id="@+id/btn_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/default_normal_margin"
                android:padding="@dimen/default_tiny_margin"
                android:text="@string/icon_text_share"
                android:textAlignment="center"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_smaller"
                app:drawableTopCompat="@drawable/ic_share" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_grower_margin"
            android:paddingEnd="@dimen/default_general_margin">

            <TextView
                android:id="@+id/tv_serial_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="选集"
                android:textColor="@color/text_black_alpha"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/rv_vod_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_vod_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:text="@string/video_all"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_normal"
                app:drawableRightCompat="@drawable/ic_more"
                app:layout_constraintBottom_toTopOf="@+id/rv_vod_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_vod_list"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_general_margin"
            android:paddingStart="@dimen/default_grower_margin"
            android:text="猜你喜欢"
            android:textColor="@color/text_black_alpha"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_vod_recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_grower_margin"
            android:paddingTop="10dp"
            android:paddingEnd="@dimen/default_general_margin" />
    </LinearLayout>

</ScrollView>