<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.player.OnlinePlayerActivity">

    <org.nudt.videoplayer.VideoPlayer
        android:id="@+id/video_player"
        android:layout_width="match_parent"
        android:layout_height="210dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_grower_margin"
                android:layout_marginBottom="@dimen/default_normal_margin"
                android:paddingStart="@dimen/default_grower_margin"
                android:paddingEnd="@dimen/default_general_margin">

                <TextView
                    android:id="@+id/tv_vod_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxEms="15"
                    android:maxLines="1"
                    android:text="纸牌屋第4季"
                    android:textColor="@color/text_black_alpha"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tv_vod_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_general_margin"
                    android:text="8.2分"
                    android:textColor="@color/text_gold"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_vod_name"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_vod_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:text="@string/desc"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_size_normal"
                    app:drawableRightCompat="@drawable/ic_gengduo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:paddingStart="@dimen/default_grower_margin"
                android:id="@+id/tv_remarks"
                tools:text="更新至09集"
                android:textSize="12sp"
                android:layout_height="wrap_content"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/default_normal_margin"
                android:padding="@dimen/default_general_margin">

                <LinearLayout
                    android:id="@+id/btn_like"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/selector_like" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/default_tiny_margin"
                        android:text="@string/icon_text_like"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/text_size_smaller" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_favor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_favor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/selector_favor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/default_tiny_margin"
                        android:text="@string/icon_text_favorite"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/text_size_smaller" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_download"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_download" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/default_tiny_margin"
                        android:text="@string/icon_text_download"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/text_size_smaller" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_share" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/default_tiny_margin"
                        android:text="@string/icon_text_share"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/text_size_smaller" />
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/tv_video_content_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_grower_margin"
                android:paddingEnd="@dimen/default_general_margin"
                android:text="简介:"
                android:textColor="@color/text_gray"
                android:textSize="16sp" />

<!--            <TextView-->
<!--                android:id="@+id/tv_video_content"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="@dimen/default_general_margin"-->
<!--                android:layout_marginBottom="@dimen/default_general_margin"-->
<!--                android:enabled="true"-->
<!--                android:focusable="true"-->
<!--                android:longClickable="true"-->
<!--                android:paddingStart="@dimen/default_grower_margin"-->
<!--                android:paddingEnd="@dimen/default_general_margin"-->
<!--                android:textColor="@color/text_gray"-->
<!--                android:textIsSelectable="true"-->
<!--                android:textSize="16sp" />-->

        </LinearLayout>

    </ScrollView>


</LinearLayout>